--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
 </main>
 <footer>
-       <p> 2024&mdash;2025 &copy; <a href="https://retro.5ht.co">Bit Edits: Ретрокомпіки</a>. All rights reserved.</p>
+       <p> 2024&mdash;2025 &copy; <a href="https://game.5ht.co">Bit Edits: Ретроконсолі</a>. All rights reserved.</p>
 </footer>
 </body>
 </html>
