--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     <section id="specifications" class="container">
             <h2><a name="code">Код</a></h2>
             <p>[1]. <a href="https://www.psxdev.net/downloads.html">Sony PSY-Q SDK for PlayStation</a><br>
-               [2]. <a href="https://github.com/Lameguy64/PSn00bSDK">Open Source SDK for PlayStation</a><br>
+               [2]. <a href="https://github.com/Lameguy64/PSn00bSDK">Lameguy64 Noob SDK for PlayStation</a><br>
+               [3]. <a href="https://github.com/Lameguy64/n00brom">Lameguy64 Noob ROM for PlayStation</a><br>
             </p>
     </section>
 </main>
