--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PSX</title>
+    <title>PS1</title>
     <link rel="stylesheet" href="https://retro.5ht.co/style.css" />
     <style>header { background: linear-gradient(135deg, #050505, #F06347); }
 </style>
